Deploy all branches with prefix d- to dev

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,15 @@ jobs:
           echo ${IMAGE}
 
   deploy-dev:
-    if: github.ref == 'refs/heads/master'
     name: Deploy to NAIS dev-gcp
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: deepakputhraya/action-branch-name@master
+        with:
+          allowed_prefixes: 'd-,master'
+          min_length: 4
+          max_length: 50
       - uses: actions/checkout@v1
       - uses: nais/deploy/actions/deploy@v1
         env:
