--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,30 +1,24 @@
-# This is a basic workflow that is manually triggered
+name: Manual dev-deploy
 
-name: Manual workflow
-
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
 on:
   workflow_dispatch:
-    # Inputs the workflow accepts.
     inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
-        # Default value if no value is explicitly provided
-        default: 'World'
-        # Input has to be provided for the workflow to run
+      gitCommit:
+        description: 'Git commit to deploy'
         required: true
+        default: ''
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+env:
+  IMAGE: docker.pkg.github.com/${{ github.repository }}/isdialogmotepdfgen:${{ github.event.inputs.gitCommit }}
+
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
-    # The type of runner that the job will run on
+  deploy-dev:
+    name: Deploy to NAIS dev-gcp
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ github.event.inputs.name }}"
+      - uses: actions/checkout@v1
+      - uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: dev-gcp
+          RESOURCE: .nais/naiserator-dev-gcp.yaml
