--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,9 @@ jobs:
   build:
     name: Checkout code and create docker tag
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -17,12 +20,14 @@ jobs:
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
           tag: ${{ github.sha }}
+    outputs:
+      image: ${{ steps.docker-build-push.outputs.image }}
 
   nais-deploy:
     needs: build
     uses: navikt/isworkflows/.github/workflows/deploy-dev-og-prod.yml@master
     with:
-      image: ${{ needs.build-and-publish.outputs.image }}
+      image: ${{ needs.build.outputs.image }}
       dev-cluster: dev-gcp
       prod-cluster: prod-gcp
     secrets: inherit
